# DataStructuresEx

./: .gitignore  CMakeLists.txt
Ex1_1/: CMakeLists.txt  SeqList.c  SeqList.h  main.c
Ex1_2/: CMakeLists.txt  LinkList.c  LinkList.h  main.c
Ex1_3/: CMakeLists.txt  main.c  polynomial.c  polynomial.h
Ex1_3_HEAD/: main.c
Ex1_3_head/: CMakeLists.txt  LinkedList.c  LinkedList.h  main.c
Ex2_1/: CMakeLists.txt  bt.c  bt.h  main.c
Ex2_2/: CMakeLists.txt  haffmanTree.c  haffmanTree.h  main.c
Ex2_2_linkedlist/: CMakeLists.txt  hfmTree.c  hfmTree.h  main.c
docs/: report.md
